82nd Commit:
Still implementing changes in presentation of Repeating events.

Now working on DayView and its sub-classes.